modified easyauth spring boot sample

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,11 @@ spring.security.oauth2.client.registration.easyauth.scope=openid
 spring.security.oauth2.client.registration.easyauth.client-name={client_name}
 
 
-spring.security.oauth2.client.provider.easyauth.issuer-uri=https://{your_subdomain}.{app}.easyauth.io/tenantbackend
-spring.security.oauth2.client.provider.easyauth.authorization-uri=https://{your_subdomain}.{app}.easyauth.io/tenantbackend/oauth2/authorize
-spring.security.oauth2.client.provider.easyauth.token-uri=https://{your_subdomain}.{app}.easyauth.io/tenantbackend/oauth2/token
+spring.security.oauth2.client.provider.easyauth.issuer-uri=https://{your_subdomain}.app.easyauth.io/tenantbackend
+spring.security.oauth2.client.provider.easyauth.authorization-uri=https://{your_subdomain}.app.easyauth.io/tenantbackend/oauth2/authorize
+spring.security.oauth2.client.provider.easyauth.token-uri=https://{your_subdomain}.app.easyauth.io/tenantbackend/oauth2/token
 spring.security.oauth2.client.provider.easyauth.redirect-uri={Redirect Uri such as http://127.0.0.1:8080/login/oauth2/code/easyauth}
-spring.security.oauth2.client.provider.easyauth.user-info-uri=https://{your_subdomain}.{app}.easyauth.io/tenantbackend/userinfo
+spring.security.oauth2.client.provider.easyauth.user-info-uri=https://{your_subdomain}.app.easyauth.io/tenantbackend/userinfo
+
+
+easyauth.config.baseuri=https://{your_subdomain}.app.easyauth.io
