--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.forward-headers-strategy=FRAMEWORK
+
 spring.security.oauth2.client.registration.easyauth=easyauth
 spring.security.oauth2.client.registration.easyauth.client-id={client_id}
 spring.security.oauth2.client.registration.easyauth.client-secret={client_secret}
